llvm/test/CodeGen/MIR/Generic/machine-function-novregs-conflict.mir
# RUN: not llc -run-pass none -o /dev/null %s 2>&1 | FileCheck %s

# Test that computed properties are not conflicting with explicitly set
# properties

---
# CHECK: error: {{.*}}: TestNoVRegsOverrideConflict has explicit property NoVRegs, but contains virtual registers
name:            TestNoVRegsOverrideConflict
noVRegs: true
body: |
  bb.0:
    %0:_(s32) = G_IMPLICIT_DEF
...
